source-sass/app.scss
// =======================================
// Custom Variables
// =======================================

$dark-blue: #161f29;
$dirty-blue: #7fa5c1;

$yellow: #ffbf42;
$light-orange: #ff9b58;
$juicy-orange: #ff4e15;

$grey: #65768a;
$off-white: #c2d2de;

$header-font: Anton, Impact, "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;


// =======================================
// Foundation
// =======================================

@import "settings";
@import "source/bower_components/foundation/scss/normalize.scss";
@import "source/bower_components/foundation/scss/foundation.scss";

// =======================================
// Import stylesheets
// =======================================
@import "animate";
@import "journey";
@import "elements";


// =======================================
// Globals
// =======================================

body {
  text-rendering: optimizeLegibility;

  * {
    box-sizing: border-box;
  }
}

// Reset

ul,
ol {
  margin-left: 0;
  list-style-position: inside;
}

// Vertical spacing etc

section {
  position: relative;
  padding: 1.25rem 0;

  &:after {
    content: '';
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
  }

  @media #{$medium-up} {
    min-height: 100%;
    padding: 3rem 0;
  }

  @media #{$large-up} {
    padding: 6rem 0;
  }
}

section:not(.cascadia-journey) {
  background: $dark-blue;
  position: relative;
  z-index: 1501;
}


// =======================================
// Typography
// =======================================

h1 {
  position: relative;
  left: -2px;
  font-size: 2.5em;
  font-family: $header-font;
  text-transform: uppercase;
  line-height: 1;
  color: #fff;

  @media #{$medium-up} {
    font-size: 4.25em;
  }

  @media #{$medium-up} {
    font-size: 5.25em;
  }

  small {
    display: block;
    margin: 1rem 0 0.75rem;
    font-family: $body-font-family;
    text-transform: none;
    font-size: 1.125rem;
    line-height: 1.3;
    color: #8c949e;

    @media #{$medium-up} {
      font-size: 1.375rem;
    }

    @media #{$large-up} {
      font-size: 1.6125rem;
    }

    strong {
      font-weight: normal;
      color: #fff;
    }

    &.subtitle {
      position: relative;
      left: 5px;
      margin-bottom: 0.25rem;
      font-size: 1rem;
      font-family: $header-font;
      text-transform: uppercase;
      letter-spacing: 6px;
      font-weight: normal;

      @media #{$medium-up} {
        font-size: 1.125rem;
      }

      @media #{$medium-up} {
        font-size: 1.25rem;
      }
    }

    &.subtitle--bottom {
      margin-top: 0.25rem;
    }
  }
}

h2 {
  font-weight: 500;
  font-size: 1.5em;
  line-height: 1.3;

  @media #{$medium-up} {
    font-size: 2.25em;
  }

  @media #{$large-up} {
    font-size: 2.875em;
  }
}

h3 {
  font-weight: 500;
  font-size: 1.35em;
  line-height: 1.3;

  @media #{$medium-up} {
    font-size: 1.875em;
  }

  @media #{$large-up} {
    font-size: 2.275em;
  }
}

p,
li {
  font-size: 1rem;
  line-height: 1.3;
  color: #8c949e;

  @media #{$medium-up} {
    font-size: 1.275rem;
  }

  @media #{$large-up} {
    font-size: 1.375rem;
  }

  strong {
    font-weight: normal;
    color: #fff;
  }
}

h4 {
  color: #8c949e;
}

bold {
  font-weight: normal;
}


// =======================================
// Links and buttons
// =======================================

// TODO: style buttons
.button {
  background: $dark-blue;
  outline: 0;
  // box-shadow: 0 0 20px 10px rgba($juicy-blue, 0.2), 0 0 4px 2px $juicy-blue;
  animation: blink 2s infinte ease-out;

  &:hover {
    // background: darken($juicy-blue, 10%);
    // box-shadow: 0 0 20px 10px rgba($juicy-blue, 0.1), 0 0 4px 2px rgba($juicy-blue, 0.4);
  }

  &:focus,
  &:active {
    outline: 0;
  }
}


// =======================================
// Header
// =======================================

// TODO: better style preloader
.js #preloader {
  position: fixed;
  left: 0;
  top: 0;
  z-index: 9999;
  width: 100%;
  height: 100%;
  overflow: visible;
  text-align: center;
  vertical-align: middle;
  background: $dark-blue;
  // TODO: Use the huge FB OG image Arnas made as the preloader
  // background: url(/media/destruction-5.jpg) center center no-repeat, $dark-blue !important;
  // background-size: cover !important;
}


// Logos

.title-logo,
.credit-logo {
  z-index: 1503;
}

.title-logo {
  display: block;
  width: 100px;
  margin: 0 auto;
  text-align: center;

  @media #{$medium-up} {
    width: 140px;
    margin-top: -2rem;
  }

  @media #{$large-up} {
    width: 160px;
    margin-top: -4rem;
  }

  img {
    width: 100%;
  }
}

.credit-logo {
  position: absolute;
  width: 150px;
  opacity: 0.25;
}

  .credit-logo--left {
    width: 175px;
    top: 3.15rem;
    left: 3rem;
  }

  .credit-logo--right {
    top: 2.3rem;
    right: 3rem;
  }


// =======================================
// Landing / Hero
// =======================================

.hero {
  z-index: 1501;
  // min-height: 100%;
  // height: 100%;
  background: $dark-blue;
  text-align: center;

  .seismic-wave {
    position: absolute;
    top: 75px;
    right: 0;
    left: 0;
    z-index: 1502;
    margin: 0 auto;
    width: 100%;
  }

  .row {
    position: relative;
    z-index: 1503;
  }

  @media #{$medium-up} {
    height: 100%;
  }

  h1 {
    margin-top: 10vh;
    margin-bottom: 5vh;
    line-height: 1;
    color: #fff;
    text-shadow: 0 0 15px rgba($dark-blue, 0.75);

    @media #{$medium-up} {
      margin-top: 17vh;
      margin-bottom: 3vh;
    }

    @media #{$large-up} {
      margin-top: 24vh;
    }

    strong {
      font-weight: 400;
    }
  }

  h2 {
    margin-top: 2rem;
    color: #fff;

    @media #{$medium-up} {
      margin-top: 4.5rem;
    }

    @media #{$large-up} {
      margin-top: 7rem;
    }
  }

  h3 {
    color: rgba(255, 255, 255, 0.5);
    font-weight: 300;

    @media #{$medium-up} {
      margin-top: 0.75rem;
    }

    @media #{$large-up} {
      margin-top: 1.5rem;
    }
  }

  p {
    margin-top: 1.25rem;
    margin-bottom: 2.5rem;
    color: #777;

    img {
      display: inline-block;
      opacity: 0.3;
    }
  }
}


// =======================================
// Meet Cascadia
// =======================================

.subduction {
  position: relative;
  z-index: 1501;
  text-align: center;
  background: $dark-blue;
  padding-top: 0 !important;

  img {
    width: 90%;
    max-width: 600px;
    margin: 0 auto;

    @media #{$large-up} {
      width: 100%;
      max-width: 100%;
    }
  }

  &:after {
    display: none;
  }
}



// =======================================
// Prediction
// =======================================

.prediction {

  h1 {
    overflow: hidden;

    @media #{$medium-up} {
      margin-top: 3rem;
    }
  }

  .circle-container {
    margin-bottom: 1rem;

    &:last-of-type {
      margin-top: 3rem;
    }
  }

  h4,
  ul .emph {
    margin-top: 0.75rem;
    margin-bottom: 0.5rem;
    color: $light-orange;
    font-size: 1.125rem;
    font-family: $header-font;
    font-weight: normal;
    text-transform: uppercase;
    letter-spacing: 2px;

    strong {
      display: block;
    }
  }

  .emph {
    display: block;
  }

  ul object {

    @media #{$small-only} {
      width: 100px;
    }
  }
}

.prediction--chance {
  padding-top: 0;
}

.prediction--scenario {
  padding-top: 0;

  ul {
    margin-bottom: 10vw;
  }
}

.subduction,
.prediction {

  h1 {
    margin-bottom: 2.5vh;

    @media #{$medium-up} {
      margin-bottom: 5vh;
    }
  }
}


// =======================================
// Japan
// =======================================

.japan {
  position: relative;
  overflow: hidden;
  padding-bottom: 0;

  h1 {
    position: relative;
    margin: 0 auto 2.5vh;

    @media #{$medium-up} {

      // Blinking red halo
      &:before {
        content: '';
        display: block;
        width: 120px;
        height: 120px;
        margin: 0 auto;
        border-radius: 50%;
        background: rgba(red, 0.25);
        box-shadow: 0 0 0 20px rgba(red, 0.25);
        animation: blinkAlt 1.5s infinite ease-out;
        position: absolute;
        top: -150px;
        left: 0;
        right: 0;
      }

      // Pusling red dot
      &:after {
        content: '';
        display: block;
        width: 120px;
        height: 120px;
        margin: 0 auto;
        border-radius: 50%;
        background: red;
        animation: heartbeat 1.5s infinite ease-out;
        position: absolute;
        top: -150px;
        left: 0;
        right: 0;
      }
    }

    @media #{$medium-up} {
      margin: 10vh auto 5vh;

      &:before,
      &:after {
        top: -175px;
      }
    }
  }

  p {
    margin-bottom: 1.5rem;

    &:last-of-type {
      margin-top: 1.5rem;

      @media #{$medium-up} {
        margin-top: 3rem;
      }
    }
  }

  @media #{$small-only} {

    img {
      width: 100%;
      max-width: 300px;
      margin: 0 auto 2rem;
    }
  }
}

// Japan photos
.japan__polaroids {

  @media #{$medium-up} {
    width: 100%;
    max-width: 100%;
    position: relative;
    left: -125px;
  }

  a {
    background: #fff;
    display: inline-block;
    float: left;
    width: auto;
    margin: 0 0 0 10px;
    padding: 5px 5px 20px;
    border-radius: 1px;
    text-align: center;
    text-decoration: none;
    color: #333;
    font-size: 18px;
    box-shadow: 0 3px 6px rgba($dirty-blue, 0.5);
    position: relative;
    z-index: 1;

    @media #{$medium-up} {
      margin: 0 0 0 30px;
      padding: 15px 15px 55px;
    }

    // Scatter the polaroids around
    &:first-of-type {
      top: -100px;
      left: 160px;
      transform: rotate(1deg);
    }

    &:nth-of-type(2) {
      top: -80px;
      left: 145px;
      transform: rotate(-2deg);
    }

    &:last-of-type {
      top: -60px;
      left: 175px;
      transform: rotate(-1deg);

      img {
        opacity: 0.32;
      }
    }
  }

  h1 {

    @media #{$medium-up} {
      margin-top: 5rem;
    }
  }
}

